Updating transactions filepath

--- a/gan.ipynb
+++ b/gan.ipynb
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "# Training data\n",
-    "transactions = pd.read_csv('data/transactions_1.csv')[['PRODUCT_ID', 'CUSTOMER_ID']].iloc[0:500000]\n",
+    "transactions = pd.read_csv('data/trans_small_subset.csv')[['PRODUCT_ID', 'CUSTOMER_ID']].iloc[0:500000]\n",
     "X = transactions.merge(prods_final, how='left', on='PRODUCT_ID').drop(columns=['PRODUCT_ID', 'CUSTOMER_ID'])\n",
     "y = transactions.merge(customers_final, how='left', on='CUSTOMER_ID').drop(columns=['PRODUCT_ID', 'CUSTOMER_ID'])"
    ]
